Första lektionen, lade till en bild samt små förändringar i html dokumentet.

--- a/Hem.html
+++ b/Hem.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Hem.css" />
   </head>
   <body>
+    <img src="Hellsingland Underground Logo.png" alt="" />
     <script src="Hem.js"></script>
   </body>
 </html>
