Lade till några bilder och försökte positionera dem

--- a/Hem.html
+++ b/Hem.html
@@ -6,8 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="Hem.css" />
   </head>
-  <body>
+  <div class="background img">
+    <img src="Hellsingland_underground.avif" alt="" />
+  </div>
+  <div class="Hellsingland_logo">
     <img src="Hellsingland Underground Logo.png" alt="" />
-    <script src="Hem.js"></script>
-  </body>
+  </div>
+  <body></body>
+  <script src="Hem.js"></script>
 </html>
