Försökte fixa bilderna till huvudsidan. Fixade bakgrundsbilden rätt.

--- a/Hem.html
+++ b/Hem.html
@@ -6,12 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="Hem.css" />
   </head>
-  <div class="background img">
-    <img src="Hellsingland_underground.avif" alt="" />
-  </div>
-  <div class="Hellsingland_logo">
-    <img src="Hellsingland Underground Logo.png" alt="" />
-  </div>
+
+  <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div>
   <body></body>
   <script src="Hem.js"></script>
 </html>
