--- a/Hem.html
+++ b/Hem.html
@@ -6,8 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="Hem.css" />
   </head>
-
-  <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div>
+  <header>
+    <h1>Hellsingland Underground</h1>
+    <ul>
+      <li><a href="">Discography</a></li>
+      <li><a href="">Store</a></li>
+      <li><a href="">Booking</a></li>
+    </ul>
+  </header>
+  <!-- <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div> -->
   <body></body>
   <script src="Hem.js"></script>
 </html>
