--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Hem.css" />
+    <link rel="stylesheet" href="Index.css" />
   </head>
   <header>
     <h1>Hellsingland Underground</h1>
     <ul>
       <li><a href="">Discography</a></li>
-      <li><a href="">Store</a></li>
+      <li><a href="Store.html">Store</a></li>
       <li><a href="">Booking</a></li>
     </ul>
   </header>
   <!-- <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div> -->
   <body></body>
-  <script src="Hem.js"></script>
+  <script src="Index.js"></script>
 </html>
