--- a/Store.html
+++ b/Store.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="Store.css" />
   </head>
-  <a href="Index.html"><img src="house_icon.png" alt="" /></a>
+  <div id="house_icon">
+    <a href="Index.html"><img src="house_icon.png" alt="" /></a>
+  </div>
   <body></body>
 </html>
