--- a/Index.html
+++ b/Index.html
@@ -16,5 +16,5 @@
   </header>
   <!-- <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div> -->
   <body></body>
-  <script src="Index.js"></script>
+  <script src="discography.js"></script>
 </html>
