Lade till lite sidor osv.

--- a/discography.html
+++ b/discography.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Discography.css" />
     <title>Document</title>
   </head>
   <body></body>
-  <script src="discography.js"></script>
+  <script src="Discrogaphy.js"></script>
 </html>
