--- a/Index.html
+++ b/Index.html
@@ -9,12 +9,11 @@
   <header>
     <h1>Hellsingland Underground</h1>
     <ul>
-      <li><a href="">Discography</a></li>
+      <li><a href="Discography.html">Discography</a></li>
       <li><a href="Store.html">Store</a></li>
       <li><a href="">Booking</a></li>
     </ul>
   </header>
   <!-- <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div> -->
   <body></body>
-  <script src="discography.js"></script>
 </html>
