organiserade filer, organiserade kod, lade till sida.

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hellsingland Underground</title>
-    <link rel="stylesheet" href="Index.css" />
+    <link rel="stylesheet" href="css/Index.css" />
   </head>
   <header>
     <h1>Hellsingland Underground</h1>
@@ -12,6 +12,7 @@
       <li><a href="Discography.html">Discography</a></li>
       <li><a href="Store.html">Store</a></li>
       <li><a href="">Booking</a></li>
+      <li><a href="">Kontakta oss</a></li>
     </ul>
   </header>
   <!-- <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div> -->
