--- a/Kontakta_oss.html
+++ b/Kontakta_oss.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/Store.css" />
+    <link rel="stylesheet" href="css/Kontakta_oss.css" />
   </head>
-  <div id="house_icon">
-    <a href="Index.html"><img src="images/house_icon.png" alt="" /></a>
-  </div>
   <body></body>
 </html>
