Lagt till olika bilder, css filer, fixat med kod, ändrat namn mm.

--- a/Booking.html
+++ b/Booking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/Store.css" />
+    <link rel="stylesheet" href="css/Booking.css" />
     <link rel="stylesheet" href="css/Header_Footer.css" />
   </head>
   <body>
@@ -17,6 +17,7 @@
         <li><a href="Contact us.html">Kontakta oss</a></li>
       </ul>
     </header>
+
     <div id="home">
       <a href="Index.html"
         ><img src="images/HU_logo.png" alt="Hemknapp/Bandlogga"
