--- a/discography.html
+++ b/discography.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/Discography.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/Header_Footer.css">
+    <title>Discography</title>
   </head>
-  <body></body>
+  <body>
+  <header>
+    <h1>Hellsingland Underground</h1>
+    <ul>
+      <li><a href="Discography.html">Discography</a></li>
+      <li><a href="Store.html">Store</a></li>
+      <li><a href="Booking.html">Booking</a></li>
+      <li><a href="Contact us.html">Kontakta oss</a></li>
+    </ul>
+  </header>
+  
+    <div id="home">
+      <a href="Index.html"
+        ><img src="images/HU_logo.png" alt="Hemknapp/Bandlogga"
+      /></a>
+    </div>
+    <footer>
+      <form action="/search" method="get" class="search-form">
+          <input type="text" name="query" placeholder="Sök..." class="search-input">
+          <button type="submit" class="search-button">Sök</button>
+      </form>
+  </body>
   <script src="Discrogaphy.js"></script>
 </html>
