--- a/Contact us.html
+++ b/Contact us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/Store.css" />
+    <link rel="stylesheet" href="css/Contact us.css" />
     <link rel="stylesheet" href="css/Header_Footer.css" />
   </head>
   <body>
@@ -14,9 +14,10 @@
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
         <li><a href="Booking.html">Booking</a></li>
-        <li><a href="Contact us.html">Kontakta oss</a></li>
+        <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
     </header>
+
     <div id="home">
       <a href="Index.html"
         ><img src="images/HU_logo.png" alt="Hemknapp/Bandlogga"
