--- a/Index.html
+++ b/Index.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hellsingland Underground</title>
     <link rel="stylesheet" href="css/Index.css" />
+    <link rel="stylesheet" href="css/Header_Footer.css" />
   </head>
-  <header>
-    <h1>Hellsingland Underground</h1>
-    <ul>
-      <li><a href="Discography.html">Discography</a></li>
-      <li><a href="Store.html">Store</a></li>
-      <li><a href="">Booking</a></li>
-      <li><a href="">Kontakta oss</a></li>
-    </ul>
-  </header>
-  <!-- <div class="logo"><img src="Hellsingland Underground Logo.png" alt="" /></div> -->
-  <body></body>
+  <body>
+    <header>
+      <h1>Hellsingland Underground</h1>
+      <ul>
+        <li><a href="Discography.html">Discography</a></li>
+        <li><a href="Store.html">Store</a></li>
+        <li><a href="Booking.html">Booking</a></li>
+        <li><a href="Contact us.html">Kontakta oss</a></li>
+      </ul>
+    </header>
+    <div class="bakgrundsbild">
+      <img
+        src="images/hellsingland_black.jpeg"
+        alt="Hellsingland Underground"
+      />
+    </div>
+  </body>
+  <footer><h2>Upphovsrätt ägs av Hellsingland Underground</h2></footer>
 </html>
