Har lagt till bilder, börjat med footer, försökt fått store att funka och se snygg ut.

--- a/Store.html
+++ b/Store.html
@@ -3,24 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Store</title>
     <link rel="stylesheet" href="css/Store.css" />
     <link rel="stylesheet" href="css/Header_Footer.css" />
   </head>
   <body>
     <header>
-      <h1>Hellsingland Underground</h1>
+      <h1><a href="Index.html">Hellsingland Underground</a></h1>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
         <li><a href="Booking.html">Booking</a></li>
-        <li><a href="Contact us.html">Kontakta oss</a></li>
+        <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
     </header>
-    <div id="home">
-      <a href="Index.html"
-        ><img src="images/HU_logo.png" alt="Hemknapp/Bandlogga"
-      /></a>
+    <div class="Vinyl_Container">
+      <div class="Madness_and_Grace_Vinyl Vinyl">
+        <img
+          src="images/Vinyl/Madness_and_Grace_Vinyl.jpg"
+          alt="Vinyl Record Madness and Grace"
+        />
+        <p>Madness and Grace</p>
+        <p>Vinyl Record</p>
+      </div>
+      <div class="Endless_Optimism_Vinyl Vinyl">
+        <img
+          src="images/Vinyl/Endless_Optimism_Vinyl.jpg"
+          alt="Vinyl Record Endless Optimism"
+        />
+        <p>Endless Optimism</p>
+        <p>Vinyl Record</p>
+      </div>
+      <div class="A_Hundred_Years_Is_Nothing_Vinyl Vinyl">
+        <img
+          src="images/Vinyl/A_Hundred_Years_Is_Nothing_Vinyl.jpg"
+          alt="Vinyl Record A Hundred Years Is Nothing"
+        />
+        <p>A Hundred Years Is Nothing</p>
+        <p>Vinyl Record</p>
+      </div>
+      <div class="Carnival_Beyond_The_Hills_Vinyl Vinyl">
+        <img
+          src="images/Vinyl/Carnival_Beyond_The_Hills.jpg"
+          alt="Vinyl Record Carnival Beyond The Hills"
+        />
+        <p>Carnival Beyonde The Hills</p>
+        <p>Vinyl Record</p>
+      </div>
+    </div>
+    <div class="CD_Container">
+      <div class="Endless_Optimism_CD CD">
+        <img
+          src="images/CD/Endless_Optimism_CD.jpg"
+          alt="CD Record Endless Optimism"
+        />
+        <p>Endless Optimism</p>
+        <p>CD Record</p>
+      </div>
+      <div class="Hellsingland_Underground_CD CD">
+        <img src="images/CD/Hellsingland_Underground_CD.jpg" alt="" />
+        <p>Hellsingland Underground</p>
+        <p>CD Record</p>
+      </div>
+      <div class="Madness_and_Grace_CD CD">
+        <img src="images/CD/Madness_and_Grace_CD.jpg" alt="" />
+        <p>Madness and Grace</p>
+        <p>CD Record</p>
+      </div>
+      <div class="Understanding_Gravity_CD CD">
+        <img src="images/CD/Understanding_Gravity_CD.jpg" alt="" />
+        <p>Understanding Gravity</p>
+        <p>CD Record</p>
+      </div>
     </div>
   </body>
 </html>
