--- a/Booking.html
+++ b/Booking.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Booking</title>
     <link rel="stylesheet" href="css/Booking.css" />
     <link rel="stylesheet" href="css/Header_Footer.css" />
   </head>
   <body>
     <header>
-      <h1>Hellsingland Underground</h1>
+      <h1><a href="Index.html">Hellsingland Underground</a></h1>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
         <li><a href="Booking.html">Booking</a></li>
-        <li><a href="Contact us.html">Kontakta oss</a></li>
+        <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
     </header>
 
