--- a/Contact us.html
+++ b/Contact us.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="css/Contact us.css" />
     <link rel="stylesheet" href="css/Header_Footer.css" />
   </head>
   <body>
     <header>
-      <h1>Hellsingland Underground</h1>
+      <h1><a href="Index.html">Hellsingland Underground</a></h1>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
