--- a/Index.html
+++ b/Index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <header>
-      <h1>Hellsingland Underground</h1>
+      <h1><a href="Index.html">Hellsingland Underground</a></h1>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
         <li><a href="Booking.html">Booking</a></li>
-        <li><a href="Contact us.html">Kontakta oss</a></li>
+        <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
     </header>
     <div class="bakgrundsbild">
@@ -24,5 +24,16 @@
       />
     </div>
   </body>
-  <footer><h2>Upphovsrätt ägs av Hellsingland Underground</h2></footer>
+  <footer>
+    <p>Copyright owned by Hellsingland Underground ™</p>
+    <div class="Social_media">
+      <a href="https://www.facebook.com/"
+        ><img src="images/facebook.png" alt="Facebook site"
+      /></a>
+      <a href="https://www.Instagram.com/"
+        ><img src="images/instagram.png" alt="Instagram Site"
+      /></a>
+      <a href="https://www.X.com/"><img src="images/twitter.png" alt="" /></a>
+    </div>
+  </footer>
 </html>
