--- a/discography.html
+++ b/discography.html
@@ -9,12 +9,12 @@
   </head>
   <body>
   <header>
-    <h1>Hellsingland Underground</h1>
+    <h1><a href="Index.html">Hellsingland Underground</a></h1>
     <ul>
       <li><a href="Discography.html">Discography</a></li>
       <li><a href="Store.html">Store</a></li>
       <li><a href="Booking.html">Booking</a></li>
-      <li><a href="Contact us.html">Kontakta oss</a></li>
+      <li><a href="Contact us.html">Contact Us</a></li>
     </ul>
   </header>
   
