Det sista har gjorts, API lades till och lyckades fungera.  Fixade en bild med media screen, samt header med media screen. Annars fixat kod så allting funkar och ser snyggt ut.

--- a/Contact us.html
+++ b/Contact us.html
@@ -10,18 +10,58 @@
   <body>
     <header>
       <h1><a href="Index.html">Hellsingland Underground</a></h1>
+      <nav>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
-        <li><a href="Booking.html">Booking</a></li>
         <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
+    </nav>
     </header>
+    <p>The band:
+      info@hellsinglandunderground.com</p>
+    <p>Spain Contact:
+    </p>
+        Jose Luis Carnes
+    <p>Mail:
+        joseluiscarnes@gmail.com
+        or
+        themadnoteco@gmail.com
+      </p>
 
-    <div id="home">
-      <a href="Index.html"
-        ><img src="images/HU_logo.png" alt="Hemknapp/Bandlogga"
+    <p>Japan Contact:
+    <br>Stefan Nilsson, CEO
+    <br>HFC Advisory Group
+    <br>
+    <br>
+    Roppongi office:
+    <br>#301, 1-10-3 Roppongi,
+    <br>Minato-ku, Tokyo 106-0032, Japan
+    <br>
+    <br>Head office:
+          Level 8,
+          Pacific Century Place,
+          1-11-1 Marunouchi,
+          Chiyoda-ku, Tokyo 100-6208, Japan
+          
+          Mobile: +81 80 3012 1606
+    <br>Tel/Fax: +81 3 5544 8554
+    <br>Email: stefan.nilsson@hfcadvisory.com
+    </p>
+  </body>
+  <footer>
+    <p>Copyright owned by Hellsingland Underground ™</p>
+    <p><h2>Our Socials</h2</p>
+    <div class="Social_media">
+      <a href="https://www.facebook.com/"
+        ><img src="images/facebook.png" alt="Facebook site"
+      /></a>
+      <a href="https://www.Instagram.com/"
+        ><img src="images/instagram.png" alt="Instagram Site"
+      /></a>
+      <a href="https://www.X.com/"
+        ><img src="images/twitter.png" alt="Twitter/X site"
       /></a>
     </div>
-  </body>
+  </footer>
 </html>
