--- a/Index.html
+++ b/Index.html
@@ -10,22 +10,22 @@
   <body>
     <header>
       <h1><a href="Index.html">Hellsingland Underground</a></h1>
+      <nav>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
-        <li><a href="Booking.html">Booking</a></li>
         <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
+    </nav>
     </header>
-    <div class="bakgrundsbild">
-      <img
-        src="images/hellsingland_black.jpeg"
-        alt="Hellsingland Underground"
-      />
+    <div class="bakgrundsbild"><img src="images/hellsingland_black.jpeg" alt="">
     </div>
+    <div class="bakgrundsbild2"><img src="images/HU_black_300.jpg" alt=""></div>
+    
   </body>
   <footer>
     <p>Copyright owned by Hellsingland Underground ™</p>
+    <p><h2>Our Socials</h2></p>
     <div class="Social_media">
       <a href="https://www.facebook.com/"
         ><img src="images/facebook.png" alt="Facebook site"
@@ -33,7 +33,9 @@
       <a href="https://www.Instagram.com/"
         ><img src="images/instagram.png" alt="Instagram Site"
       /></a>
-      <a href="https://www.X.com/"><img src="images/twitter.png" alt="" /></a>
+      <a href="https://www.X.com/"
+        ><img src="images/twitter.png" alt="Twitter/X site"
+      /></a>
     </div>
   </footer>
 </html>
