--- a/Store.html
+++ b/Store.html
@@ -10,13 +10,15 @@
   <body>
     <header>
       <h1><a href="Index.html">Hellsingland Underground</a></h1>
+      <nav>
       <ul>
         <li><a href="Discography.html">Discography</a></li>
         <li><a href="Store.html">Store</a></li>
-        <li><a href="Booking.html">Booking</a></li>
         <li><a href="Contact us.html">Contact Us</a></li>
       </ul>
+    </nav>
     </header>
+    <h2>Store</h2>
     <div class="Vinyl_Container">
       <div class="Madness_and_Grace_Vinyl Vinyl">
         <img
@@ -77,4 +79,19 @@
       </div>
     </div>
   </body>
+  <footer>
+    <p>Copyright owned by Hellsingland Underground ™</p>
+    <p><h2>Our Socials</h2></p>
+    <div class="Social_media">
+      <a href="https://www.facebook.com/"
+        ><img src="images/facebook.png" alt="Facebook site"
+      /></a>
+      <a href="https://www.Instagram.com/"
+        ><img src="images/instagram.png" alt="Instagram Site"
+      /></a>
+      <a href="https://www.X.com/"
+        ><img src="images/twitter.png" alt="Twitter/X site"
+      /></a>
+    </div>
+  </footer>
 </html>
